--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@
 
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    border: white solid 1px;
 }
 
 body {
@@ -13,4 +16,37 @@ body {
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
+    font-size: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh;
+    color: white;
+    background-color: #111827;
+}
+
+header, main, footer {
+    width: 100%;
+    text-align: center;
+}
+
+main {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cards-container {
+    width: 100%;
+    height: 100%;
+    padding: 2rem;
+    display: flex;
+    align-items: flex-start;
+}
+
+.card {
+    margin: 1rem;
+    padding: 1rem;
 }
