--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    border: white solid 1px;
+    /* border: 1px white solid; */
 }
 
 body {
@@ -23,12 +23,19 @@ body {
     flex-direction: column;
     height: 100vh;
     color: white;
-    background-color: #111827;
+    background-color: rgb(17 24 39);
 }
 
 header, main, footer {
     width: 100%;
     text-align: center;
+}
+
+header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(55 65 81);
 }
 
 main {
@@ -38,15 +45,48 @@ main {
     align-items: center;
 }
 
+footer {
+    padding: 1rem;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
 .cards-container {
     width: 100%;
     height: 100%;
     padding: 2rem;
     display: flex;
     align-items: flex-start;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 1.5rem;
 }
 
 .card {
-    margin: 1rem;
     padding: 1rem;
+    width: 20rem;
+    height: 25rem;
+    background-color: rgb(55 65 81);
+    border-radius: 1rem;
 }
+
+
+/* 
+slate 700 rgb(51 65 85) 
+slate 800 rgb(30 41 59)
+grey 700 rgb(55 65 81)
+grey 800 rgb(31 41 55)
+grey 900 rgb(17 24 39)
+grey 950 rgb(3 7 18)
+blue 700 rgb(29 78 216)
+blue 800 rgb(30 64 175)
+blue 900 rgb(30 58 138)
+red 700 rgb(185 28 28)
+red 800 rgb(153 27 27)
+green 600 rgb(22 163 74)
+green 700 rgb(21 128 61)
+*/
+/* fix the main so it expands if there are too many books */
