--- a/style.css
+++ b/style.css
@@ -68,6 +68,96 @@ dialog {
     max-width: 500px; 
 }
 
+.form-container {
+    display: flex;
+    align-items: stretch;
+    flex-direction: column;
+}
+
+.close-dialog {
+    display: flex;
+    align-self: flex-end;
+    padding-bottom: 0.5rem;
+}
+
+#form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.form-inputs {
+    display: flex;
+    justify-content: space-between;
+    gap: 1rem;
+}
+
+.left, .right {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    flex: 1;
+}
+
+button.add-book, button.submit {
+    align-self: center;
+    background-color: rgb(30 64 175);
+    color: white;
+    border: none;
+    padding: 0.5rem 1rem;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    font-size: 1rem;
+    margin-top: 1rem;
+}
+
+button.add-book:hover, button.submit:hover {
+    background-color: rgb(29 78 216);
+}
+
+button.close-button {
+    background-color: rgb(30 41 59);
+    width: 2.4rem;
+    height: 2.4rem;
+    border-radius: 50%;
+    border: none;
+    color: white;
+    font-size: 1.2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    transition: transform 0.2s;
+}
+
+button.close-button:hover {
+    transform: scale(1.05);
+    background-color: rgb(55 65 81);
+}
+
+label {
+    font-size: 0.9rem;
+    margin-bottom: 0.2rem;
+}
+
+input[type="text"], input[type="number"], input[type="checkbox"] {
+    padding: 0.5rem;
+    border: 1px solid #ccc;
+    border-radius: 0.3rem;
+    font-size: 0.9rem;
+    width: 100%;
+}
+
+input[type="checkbox"] {
+    width: auto;
+}
+
+.close-icon {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
 
 .cards-container {
     width: 100%;
