--- a/style.css
+++ b/style.css
@@ -75,9 +75,50 @@ footer {
 }
 
 .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
     padding: 1rem;
     background-color: rgb(55 65 81);
     border-radius: 1rem;
+    text-align: center;
+}
+
+.card p {
+    font-size: 1.5rem;
+}
+
+.details-container {
+    text-align: left;
+    margin-top: 1rem;
+}
+
+.card-buttons, .input-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card-buttons {
+    gap: 2rem
+}
+
+.input-container {
+    gap: 0.5rem
+}
+
+.delete {
+    padding: 0.5rem 1rem;
+    border-radius: 0.5rem;
+    box-shadow: none;
+    border: none;
+    background-color: rgb(153 27 27);
+    color: white;
+}
+
+.delete:hover {
+    background-color: rgb(185 28 28);
 }
 
 a {
