--- a/style.css
+++ b/style.css
@@ -66,7 +66,8 @@ footer {
 
 .cards-container {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-rows: repeat(4, 250px);
     grid-auto-rows: 250px;
     gap: 1.5rem;
     width: 80%;
